# meepo

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  SOUL.md  install.ps1  install.sh
.github/workflows/: release.yml
Formula/: meepo.rb
config/: CLAUDE.md  default.toml
crates/meepo-a2a/: Cargo.toml
crates/meepo-a2a/src/: client.rs  lib.rs  protocol.rs  server.rs  tool.rs
crates/meepo-apple-mcp/: Cargo.toml
crates/meepo-apple-mcp/src/: applescript.rs  main.rs  tools.rs
crates/meepo-channels/: Cargo.toml
crates/meepo-channels/src/: alexa.rs  bus.rs  contacts.rs  discord.rs  email.rs  imessage.rs  lib.rs  notes.rs  rate_limit.rs  slack.rs
crates/meepo-cli/: Cargo.toml
crates/meepo-cli/src/: CLAUDE.md  config.rs  main.rs  template.rs
crates/meepo-core/: Cargo.toml
crates/meepo-core/src/: CLAUDE.md  agent.rs  api.rs  corrective_rag.rs  guardrails.rs  intent.rs  lib.rs  middleware.rs  notifications.rs  orchestrator.rs  query_router.rs  secrets.rs  summarization.rs  tavily.rs  tool_selector.rs  (+2 more)
crates/meepo-gateway/: Cargo.toml
crates/meepo-gateway/src/: auth.rs  lib.rs  protocol.rs  server.rs  session.rs  session_tools.rs  webchat.rs
crates/meepo-mcp/: Cargo.toml
crates/meepo-mcp/src/: adapter.rs  client.rs  lib.rs  protocol.rs  server.rs
docs/: CLAUDE.md  CODEBASE_ANALYSIS.md  HOMEBREW_TAP_SETUP.md  OPENCLAW_PARITY_PLAN.md  UNIT_TEST_PLAN.md  architecture.md  security-audit.md
docs/plans/: 2026-02-08-sub-agent-system-design.md  2026-02-08-web-search-design.md  2026-02-09-autonomous-agent-design.md  2026-02-09-autonomous-loop-step1-plan.md  2026-02-09-email-channel-and-folder-access-design.md  2026-02-09-email-channel-and-folder-access-plan.md  2026-02-09-github-releases-and-homebrew.md  CLAUDE.md
scripts/: CLAUDE.md  install.sh  run.sh  setup.sh
(+75 files in other folders)
