[package]
name = "meepo-apple-mcp"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Standalone MCP server bridging Apple apps (Mail, Calendar, Contacts, Reminders, Notes, Music) via AppleScript"

[[bin]]
name = "meepo-apple-mcp"
path = "src/main.rs"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
