[package]
name = "meepo-mcp"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "MCP server and client for Meepo AI agent"

[dependencies]
meepo-core = { path = "../meepo-core" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
uuid = { workspace = true }
